--- a/employer/templates/employer/base.html
+++ b/employer/templates/employer/base.html
@@ -49,10 +49,10 @@
             </button>
           </div>
           <div class="hidden lg:flex lg:gap-x-12">
-            <a href="/" class="text-sm font-semibold leading-6 text-gray-900"
+            <a href="{% url 'employer:home' %}" class="text-sm font-semibold leading-6 text-gray-900"
               >Home</a
             >
-            <a href="#" class="text-sm font-semibold leading-6 text-gray-900"
+            <a href="{% url 'employer:dashboard' %}" class="text-sm font-semibold leading-6 text-gray-900"
               >Dashboard</a
             >
             <a href="#" class="text-sm font-semibold leading-6 text-gray-900"
@@ -160,7 +160,7 @@
                     >Home</a
                   >
                   <a
-                    href="#"
+                    href="{% url 'employer:dashboard' %}"
                     class="-mx-3 block rounded-lg px-3 py-2 text-base font-semibold leading-7 text-gray-900 hover:bg-gray-50"
                     >Dashboard</a
                   >
