--- a/employer/templates/employer/base.html
+++ b/employer/templates/employer/base.html
@@ -12,7 +12,7 @@
   </head>
   <body class="h-full">
     <div class="bg-white">
-      <header class="absolute inset-x-0 top-0 z-50">
+      <header class="absolute inset-x-0 top-0 z-50 bg-white">
         <nav
           class="flex items-center justify-between p-6 lg:px-8"
           aria-label="Global"
@@ -56,10 +56,11 @@
               >Home</a
             >
             <a href="{% url 'employer:dashboard' %}" class="text-sm leading-6
-            {% if request.path == '/member/employer/dashboard' %}text-blue-500 font-bold{% else %}text-gray-900 font-semibold{% endif %}"
+            {% if request.path == '/member/employer/dashboard/' %}text-blue-500 font-bold{% else %}text-gray-900 font-semibold{% endif %}"
               >Dashboard</a
             >
-            <a href="#" class="text-sm font-semibold leading-6 text-gray-900"
+            <a href="{% url 'employer:about_us' %}" class="text-sm font-semibold leading-6
+              {% if request.path == '/member/employer/about/' %}text-blue-500 font-bold{% else %}text-gray-900{% endif %}"
               >About Us</a
             >
             <a href="#" class="text-sm font-semibold leading-6 text-gray-900"
@@ -172,8 +173,9 @@
                     >Dashboard</a
                   >
                   <a
-                    href="#"
-                    class="-mx-3 block rounded-lg px-3 py-2 text-base font-semibold leading-7 text-gray-900 hover:bg-gray-50"
+                    href="{% url 'employer:about_us' %}"
+                    class="-mx-3 block rounded-lg px-3 py-2 text-base leading-7 hover:bg-gray-50
+                    {% if request.path == '/member/employer/about/' %}text-blue-500 font-bold{% else %}text-gray-900 font-semibold{% endif %}"
                     >About Us</a
                   >
                   <a
