--- a/account/templates/jobseeker/about_us.html
+++ b/account/templates/jobseeker/about_us.html
@@ -92,10 +92,26 @@ GlobPath Landing Page
                         </div>
                     </div>
 
-                    <a href="https://github.com/your-repository" class="px-4 py-2 bg-blue-500 text-white rounded hover:bg-blue-700 mt-8 inline-block">View GitHub Repository</a>
+                    <a href="https://github.com/Korede456/globalpath.git" class="px-4 py-2 bg-blue-500 text-white rounded hover:bg-blue-700 mt-8 inline-block">View GitHub Repository</a>
                 </div>
             </div>
         </div>
     </section>
+
+ <!-- Video Section -->
+<section id="video" class="py-20 bg-gray-200">
+    <div class="container mx-auto text-center">
+        <h2 class="text-4xl font-bold mb-8">Watch Our Project Video</h2>
+        <p class="mb-8">Learn more about GlobPath, our team, and the features that make it stand out.</p>
+        
+        
+        <a href="https://drive.google.com/file/d/1xPjViGdBABpgkYy8x_8mh_w-W9Be_CZY/view?usp=sharing" class="px-6 py-3 bg-green-500 text-white rounded hover:bg-blue-700 mt-6 inline-block">
+            Watch Our Project Video
+        </a>
+        
+    </div>
+</section>
+
+
 
 {% endblock %}
