SINGLE_JOB_ENDPOINT: mobile and desktop re-do

--- a/account/templates/jobseeker/components/desktop_view.html
+++ b/account/templates/jobseeker/components/desktop_view.html
@@ -1,5 +1,5 @@
-<ul class="space-y-4">
-  {% for job in jobs %}
+ <!-- Job Details on the Right -->
+ <ul class="space-y-4">
   <li
     class="each border shadow rounded-lg mb-3 cursor-pointer"
   >
@@ -18,40 +18,33 @@
           </div>
 
           <div class="relative w-full">
-            <h2 class="text-xl font-semibold text-gray-900">{{ job.title }}</h2>
+            <h2 class="text-xl font-semibold text-gray-900">title</h2>
             <p class="text-xs">
               <span class="text-gray-500">by </span>
               <span class="font-semibold truncate"
-                >{{ job.company.company_name }}</span
+                >Company name</span
               >
               <span class="text-gray-500">in</span>
               <span class="text-green-900 font-semibold"
-                >{{ job.category }}</span
+                >Category</span
               >
             </p>
 
             <div class="flex space-x-4 mt-4 justify-between">
               <div>
                 <span class="py-1 px-2 bg-purple-100 rounded-full text-xs"
-                  >{{ job.job_type }}</span
+                  >type</span
                 >
                 <span class="py-1 px-2 bg-green-100 rounded-full text-xs"
-                  >{{ job.schedule }}</span
+                  >schedule</span
                 >
               </div>
                 <span class="py-1 px-2 bg-green-100 rounded-full text-xs">
-                  {% if job.time_posted|date:"Y-m-d" == now|date:"Y-m-d" %}
-                    Today {{ job.time_posted|time:"H:i" }}
-                  {% else %}
-                    {{ job.time_posted|date:"M j" }}
-                  {% endif %}
+                  time
                 </span>
           </div>
         </div>
       </div>
     </div>
   </li>
-  {% empty %}
-  <li>No jobs available at the moment.</li>
-  {% endfor %}
 </ul>
