--- a/account/templates/jobseeker/components/desktop_view.html
+++ b/account/templates/jobseeker/components/desktop_view.html
@@ -1,8 +1,6 @@
  <!-- Job Details on the Right -->
  <ul class="space-y-4">
-  <li
-    class="each border shadow rounded-lg mb-3 cursor-pointer hidden lg:block"
-  >
+  <li class="each jobDetailsDesktop border shadow rounded-lg mb-3 cursor-pointer hidden">
     <div class=" ">
       <div class="">
         <div class="wrapper">
