SINGLE_JOB_ENDPOINT:Desktop View working now, working on search query almost

--- a/account/templates/jobseeker/components/mobile_view.html
+++ b/account/templates/jobseeker/components/mobile_view.html
@@ -1,9 +1,13 @@
 <div id="jobDetailsMobile" class="  z-50 hidden bg-white fixed min-h-screen top-0 right-0 bottom-0 left-0 bg-red-400 lg:hidden">
-  <button id="jobDetailsMobileButton"
-    class="hide_button h-fit w-fit text-indigo-600 font-bold text-lg mb-4 bg-red-400"
-  >
-    Back to Listings
-  </button>
+
+
+    <div class="px-3 relative mb-4">
+      <img id="jobDetailsMobileButton"
+           src="../../static/images/arrow.png"
+           alt="back-to-home"  height="20px"
+           width="20px" class="hide_button h-[15px] mx-3 mt-2 block cursor-pointer hover:scale-105 transition-all duration-70 delay-10"
+      />
+    </div>
 
 <!--  details section-->
   <div class="JobDetailsSection px-4">
@@ -11,7 +15,7 @@
 
       <div class="flex justify-between ">
         <div>
-            <h2 class="text-2xl font-bold w-[75%]" id="jobTitleMobile"></h2>
+            <h2 class="text-2xl font-bold " id="jobTitleMobile">dd</h2>
             <h4 class=" font-medium w-[75%]  text-lg text-gray-500"  id="jobCompany"></h4>
         </div>
          <div
