FIXING_CONFLICT: FIXED BUG

--- a/account/templates/jobseeker/components/mobile_view.html
+++ b/account/templates/jobseeker/components/mobile_view.html
@@ -1,7 +1,7 @@
-<div id="jobDetailsMobile" class="  z-50 hidden bg-white fixed min-h-screen top-0 right-0 bottom-0 left-0 bg-red-400 lg:hidden">
+<div id="jobDetailsMobile" class="  z-50 hidden fixed min-h-screen top-0 right-0 bottom-0 left-0 bg-white lg:hidden">
 
 
-    <div class="px-3 relative mb-4">
+    <div class="px-3 relative mb-5">
       <img id="jobDetailsMobileButton"
            src="../../static/images/arrow.png"
            alt="back-to-home"  height="20px"
@@ -29,7 +29,7 @@
             />
           </div>
       </div>
-        <p class="text-gray-400 text-sm flex item-center text-gray-200 text-sm">
+        <p class="flex item-center text-gray-200 text-sm">
             <span id="jobCountry" class="inline">Country</span> -
             <span class="inline" id="jobSchedule"></span>
         </p>
